# crypto-fun

./: .env.example  Cargo.toml  Crypto-Fun-API.postman_collection.json  Dockerfile  Readme.md
src/: main.rs
src/constant/: mod.rs  response_code.rs
src/database/: database.rs  mod.rs
src/database/collections/: currency_collection.rs  mod.rs  price_collection.rs
src/handlers/: currency.rs  default.rs  files.rs  mod.rs  price.rs
src/models/: mod.rs
src/models/dto/: chart_response_dto.rs  crypto_bubble_response_dto.rs  mod.rs
src/models/request/: bubble_request.rs  charts_request.rs  mod.rs  pagination_request.rs  price_request.rs
src/models/response/: api_pagination_response.rs  api_response.rs  bubble_response.rs  chart_response.rs  crypto_bubble_response.rs  currency_response.rs  mod.rs  pagination_response.rs  price_response.rs  search_response.rs
src/repositories/: currency_repository.rs  mod.rs  price_repository.rs
src/routes/: currency.rs  files.rs  mod.rs  price.rs
src/scheduler/: bubble_price.rs  mod.rs
src/utils/: commons.rs
