[package]
name = "crypto-fun"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
mongodb = "3.2.1"
bson = "2.13.0"
dotenvy = "0.15.7"
chrono = "0.4.39"
regex = "1"
